# fastapi-tortoise-rbac

./: README.md  pyproject.toml
src/fastapi_tortoise_rbac/api/apis/: apis.py
src/fastapi_tortoise_rbac/api/base/: base.py
src/fastapi_tortoise_rbac/api/menus/: menus.py
src/fastapi_tortoise_rbac/api/roles/: roles.py
src/fastapi_tortoise_rbac/api/users/: users.py
src/fastapi_tortoise_rbac/auth/: __init__.py  auth.py  dependency.py  jwt.py
src/fastapi_tortoise_rbac/controllers/: user.py
src/fastapi_tortoise_rbac/core/: __init__.py
src/fastapi_tortoise_rbac/schemas/: apis.py
