[project]
name = "fastapi-tortoise-rbac"
version = "0.1.0"
description = "fastapi中实现rbac功能"
authors = [
    {name = "moxiaoying", email = "768091671@qq.com"},
]
dependencies = [
    "pydantic>=2.5.2",
    "passlib>=1.7.4",
    "fastapi>=0.105.0",
    "pydantic-settings>=2.1.0",
    "tortoise-orm>=0.20.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
